[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-tools"
version = "0.1"
description = 'Python package with useful tools for solving simple network science problems'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Daniel", email = "gonzalezquezada.d@northeastern.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Daniel/network-tools#readme"
Issues = "https://github.com/Daniel/network-tools/issues"
Source = "https://github.com/Daniel/network-tools"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/network_tools tests}"

[tool.coverage.run]
source_pkgs = ["network_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/network_tools/__about__.py",
]

[tool.coverage.paths]
network_tools = ["src/network_tools", "*/network-tools/src/network_tools"]
tests = ["tests", "*/network-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
